--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="foodHolder"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="app.js"></script>
+        <script src="assets/app.js"></script>
 
 
 
