--- a/GroupProject1/index.html
+++ b/GroupProject1/index.html
@@ -33,7 +33,7 @@
             </div>
 
         <div class="col-sm-3" id="videoDisplay">
-            <iframe frameborder="0" width="480" height="270" src="http://www.dailymotion.com/embed/video/xzvjxk" allowfullscreen allow="autoplay"></iframe>
+            <iframe frameborder="0" width="480" height="270" src="https://www.dailymotion.com/embed/video/xzvjxk" allowfullscreen allow="autoplay"></iframe>
         </div>
     </div>
     </container>
