--- a/GroupProject1/index.html
+++ b/GroupProject1/index.html
@@ -29,17 +29,17 @@
 
     <container>
         <div class="row">
-            <div class="col-sm-3" id="recipeDisplay">
+            <div class="col-sm-7" id="recipeDisplay">
             </div>
 
         <div class="col-sm-3" id="videoDisplay">
-            <iframe frameborder="0" width="480" height="270" src="https://www.dailymotion.com/embed/video/xzvjxk" allowfullscreen allow="autoplay"></iframe>
         </div>
     </div>
     </container>
 
     <container>
         <h1> Saved Recipes</h1>
+        <button class="btn btn-primary" id="clear-saved" type="submit">Clear Saved Recipes</button>
         <div class="row">
             <div class="col-sm-5" id="savedRecipeDisplay">
             </div>
