--- a/GroupProject1/index.html
+++ b/GroupProject1/index.html
@@ -46,5 +46,6 @@
         </div>
     </container>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/java.js"></script>
+    <script Content-type="text/html" src="assets/java.js"></script>
+
 </body>
